# QuantumV

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
QuantumSandbox/: CMakeLists.txt  main.cpp
QuantumV/: CMakeLists.txt
QuantumV/assets/shaders/: VertexShader.hlsl
QuantumV/assets/shaders/d3d12/: PixelShader.hlsl  VertexShader.hlsl
QuantumV/assets/shaders/dx12/: VertexShader.hlsl
QuantumV/include/: QuantumV.h
QuantumV/include/QuantumV/: dll_header.h  entry_point.h
QuantumV/include/QuantumV/core/: Application.h  Base.h  EventDispatcher.h  EventQueue.h  IEvent.h  Log.h
QuantumV/include/QuantumV/events/: EventQueue.h  IEvent.h  KeyboardEvent.h
QuantumV/include/QuantumV/render/: BaseRenderer.h
QuantumV/include/QuantumV/render/D3D12/: D3D12Renderer.h
QuantumV/include/QuantumV/render/Vulkan/: VulkanRenderer.h
QuantumV/include/QuantumV/resources/: Mesh.h  Resource.h  ResourceManager.h  Texture.h
QuantumV/include/QuantumV/util/: stb_image.h
QuantumV/src/core/: Application.cpp  EventDispatcher.cpp  EventProcessor.cpp  EventProcessor.h  Log.cpp  Window.cpp  Window.h
QuantumV/src/events/: EventDispatcher.cpp  EventDispatcher.h  EventProcessor.cpp  EventProcessor.h  EventQueue.cpp  KeyboardEvent.cpp
QuantumV/src/render/: CameraFactory.cpp  CameraFactory.h  DX12Renderer.cpp  DX12Renderer.h  DirectX12Renderer.cpp  DirectX12Renderer.h  IAllocator.h  ICamera.h  IObject.cpp  IObject.h  IRenderer.cpp  IRenderer.h  Math.h  Object.cpp  Object.h  ObjectFactory.cpp  ObjectFactory.h  PlatformDependent.h  Primitives.h  QVMath.h  RenderAPI.h  RendererFactory.cpp  RendererFactory.h  ResizeEvent.cpp  ResizeEvent.h
QuantumV/src/render/D3D12/: Allocator.cpp  Allocator.h  Camera.cpp  Camera.h  D3D12Renderer.cpp  Object.cpp  Object.h  Renderer.cpp  Renderer.h
QuantumV/src/render/DX12/: DX12Object.cpp  DX12Object.h  DX12Renderer.cpp  DX12Renderer.h
QuantumV/src/render/Vulkan/: Renderer.cpp  Renderer.h  VulkanRenderer.cpp
QuantumV/src/resources/: Mesh.cpp  ResourceManager.cpp  Texture.cpp
QuantumV/src/util/: Timer.cpp  Timer.h
QuantumV/src/utils/: Timer.cpp  Timer.h
